# Touch_screen

touch_screen/: .gitignore  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  adb.docx  package.xml  touch_screen.pro  virtualkeyboard_v1.py  virtualkeyboard_v2.py
touch_screen/TouchScreen_AutoStart/: adb_vision.docx  readme.txt  virtualkeyboard.py
touch_screen/launch/: touch_screen.launch
touch_screen/resources/: error.qml  main.qml  qml.qrc  ros_config.xml
touch_screen/resources/Myscripts/: creacion_componentes.js  juegos.js
touch_screen/resources/componentes/: Audio.qml  Gif.qml  Imagen.qml  Menu.qml  My_button.qml  My_button_anim.qml  My_button_anim_Y.qml  My_webview.qml  Progress_bar.qml  Texto.qml  Video.qml
touch_screen/resources/forms/: Contenedor.qml  Template0.qml  Template1.qml  Template10.qml  Template2.qml  Template3.qml  Template4.qml  Template5.qml  Template6.qml  Template7.qml  Template8.qml  Template9.qml
touch_screen/resources/multimedia/: .ttxfolder
touch_screen/resources/multimedia/video/: 24horas.m3u  eyes_test_mv.mov
touch_screen/resources/multimedia/web/: differences_game.html  memory_game.html
touch_screen/resources/multimedia/web/css/compiled/: memoryGame.css  memoryGame.css.map
touch_screen/resources/multimedia/web/css/sass/: memoryGame.scss
touch_screen/resources/multimedia/web/js/: polling.js  server.js  utils.js
touch_screen/scripts/: README.txt  install_android_environment.bash  install_qt_x64.bash  install_qt_x86.bash
touch_screen/src/: CMakeLists.txt  MenuButton.h  MenuProperties.h  MultimediaProperties.h  ros_client_thread.cpp  ros_client_thread.h  ros_publisher_thread.cpp  ros_publisher_thread.h  ros_server_thread.cpp  ros_server_thread.h  ros_subscriber_thread.cpp  ros_subscriber_thread.h  screen_interface.cpp  screen_interface.h  screen_interface_main.cpp  templateProperties.h  textproperties.h
