<?xml version="1.0"?>
<package format="2">
    <name>touch_screen</name>
    <version>0.0.0</version>
    <description>
        A node used to interact with a touch screen. It shows either images
        or menus with various buttons for input.
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example: -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="jony.lab.rob@gmail.com">Jonatan Alcocer Luna</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>touch_screen_msgs</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
    </export>
</package>
